# PaperHeaver

./: CMakeLists.txt  manifest.json.in
app/: CMakeLists.txt  PaperHeaver.qml  paperheaver.desktop.in
app/components/: CMakeLists.txt  ContentPickerDialog.qml  Settings.qml
app/tests/autopilot/: run
app/tests/autopilot/PaperHeaver/main/: test_main.py
app/ui/: CMakeLists.txt  FileViewPage.qml  FilesPage.qml  LoginPage.qml
backend/: CMakeLists.txt
backend/modules/Paperheaver/: backend.cpp  backend.h  filemodel.cpp  filemodel.h  filetreeitem.cpp  filetreeitem.h  googledrivemodel.cpp  googledrivemodel.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
